- comments - making ActorRunnable leaner - adding ActorRunnableUtils - adding QueuedActorRunnable to avoid multiple instantiations of flows utilizing same connection pools - adding common trait for distinct ActorRunnable types (normal and queued) - adding With[T] trait to Types - version bump datatypes and removal of deprecated MaxPermSize jvm option - remove MaxPermSize in kolibri-base build.sbt